--- a/IotFocusButton/SignalRFocusButton/IotFocusButton.csproj
+++ b/IotFocusButton/SignalRFocusButton/IotFocusButton.csproj
@@ -56,8 +56,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ScriptRunner\BatchFileRunner.cs" />
+    <Compile Include="ScriptRunner\IScriptRunner.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptRunnerManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
