--- a/IotFocusButton/SignalRFocusButton/IotFocusButton.csproj
+++ b/IotFocusButton/SignalRFocusButton/IotFocusButton.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptRunnerManager.cs" />
+    <Compile Include="ScriptRunner\PythonScriptRunner.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
